[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmfug"
version = "1.0.0"
description = "Fast Memory Friendly Username Generator"
authors = [{ name = "Udodelige" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["tqdm>=4.65.0"]

[project.scripts]
fmfug = "fmfug:main"
